# RustyArchive-

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vault_header_parser.rs
src/: archive.rs  cli.rs  crypto.rs  error.rs  lib.rs  main.rs  manifest.rs  vault_format.rs
tests/: extraction_safety.rs  roundtrip.rs  vault_header.rs
