[package]
name = "rustyarchive"
version = "0.1.0"
edition = "2024"
description = "RustyArchive is a Rust CLI vault tool for packing files into encrypted .rav vaults."
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-normalization = "0.1"
walkdir = "2"
zeroize = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
hex = "0.4"
tempfile = "3"
